# raytracing

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  TODO.todo  main.cpp  readme.md  run.bat
includes/: application.hpp  bob.hpp  image.hpp  scene.hpp  utils.hpp  view.hpp  viewport.hpp
lib/ImGui/: ImGuiBuild.cpp  imconfig.h  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgui_widgets.cpp
lib/glfw/include/GLFW/: glfw3.h
res/: compile.bat
res/scenes/: scene.yaml
res/shaders/: comp.spv  def.glsl  shader.comp  tmp  tmp2
src/: application.cpp  exemple.cpp  image.cpp  main.cpp  raytracer.cpp  scene.cpp  view.cpp  viewport.cpp
src/engine/: compute_pipeline.cpp  device.cpp  engine.cpp  engine.hpp  graphics.cpp  instance.cpp  swap_chain.cpp  uniform.cpp  utils.cpp
src/engine/includes/: compute_pipeline.hpp  config.hpp  device.hpp  device_structures.hpp  graphics_pipeline.hpp  instance.hpp  swap_chain.hpp  utils.hpp
src/engine/src/: compute_pipeline.cpp  device.cpp  graphics_pipeline.cpp  instance.cpp  swap_chain.cpp  utils.cpp
